kustomize/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: demo
  labels:
    environment: baes
    app.kubernetes.io/name: demo
spec:
  selector:
    matchLabels:
      app: demo
      # app.kubernetes.io/name: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: nginx
        command: ["/bin/sh"]
        args: ["-c", "echo \"${HOSTNAME} v3\" > /usr/share/nginx/html/index.html && /usr/sbin/nginx -g \"daemon off;\""]
        ports:
        - containerPort: 80
  strategy:
    canary:
      canaryService: canary-service
      stableService: stable-service
      trafficRouting:
        nginx:
          stableIngress: stable-demo
          # annotationPrefix: customingress.nginx.ingress.kubernetes.io
          additionalIngressAnnotations:
            canary-weight: "20"
      steps:
        - setWeight: 100
        - pause: {}
