kustomize/base/service-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc-active
  enviroment: base
spec:
  selector:
    app: demo
  ports:
  - port: 80
    targetPort: 80
