kustomize/base/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
  # enviroment: base
spec:
  selector:
    app: demo
    # app.kubernetes.io/name: demo
  ports:
  - port: 80
    targetPort: 80
