kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  enviroment: dev
  app: demo
spec:
  selector:
    app: demo
  ports:
  - port: 80
    targetPort: 80
