kustomize/base/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: 10
spec:
  ingressClassName: nginx
  rules:
  - host: base.dashboard.com
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: canary-service
            port: 
              number: 80
        path: /canary
